--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>nevisende</title>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <nav>
+        <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <i class="menu-icon"></i>
+    </nav>
 </body>
 </html>
