Replace  nav element with header element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>nevisende</title>
 </head>
 <body>
-    <nav>
+    <header>
         <ul class="nav-list">
             <li><a href="#">Home</a></li>
             <li><a href="#">Portfolio</a></li>
@@ -17,6 +17,6 @@
             <li><a href="#">Contact</a></li>
         </ul>
         <i class="menu-icon"></i>
-    </nav>
+    </header>
 </body>
 </html>
