Add the headline section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <ul class="nav-list">
+        <ul class="header-list">
             <li><a href="#">Home</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">About</a></li>
@@ -18,5 +18,13 @@
         </ul>
         <i class="menu-icon"></i>
     </header>
+    <main>
+        <div class="headline-section">
+            <h1>Furkan Denizhan</h1>
+            <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
+If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
+            <button>Start collaboration</button>
+        </div>
+    </main>
 </body>
 </html>
