Add CSS of the header section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     </header>
     <main>
         <div class="headline-section">
-            <h1>Furkan Denizhan</h1>
-            <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
+            <div class="headline-content">
+                <h1>Furkan Denizhan</h1>
+                <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
 If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-            <button>Start collaboration</button>
+                <button>Start collaboration</button>
+            </div>
+            <img src="./media/header-section.svg" alt="">
         </div>
     </main>
 </body>
