Change to pull request

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <ul class="nav-list">
+            <ul class="header-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">About</a></li>
@@ -23,12 +23,12 @@
     <main>
         <div class="headline-section">
             <div class="headline-content">
-                <h1>Furkan Denizhan</h1>
-                <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
+                <h2 class="headline-title">Furkan Denizhan</h2>
+                <p class="headline-p">Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
 If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-                <button>Start collaboration</button>
+                <button class="headline-button">Start collaboration</button>
             </div>
-            <img src="./media/header-section.svg" alt="">
+            <img class="headline-img" src="./media/header-section.svg" alt="">
         </div>
     </main>
 </body>
