--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <div class="headline-section">
+        <section class="headline-section">
             <div class="headline-content">
                 <h2 class="headline-title">Furkan Denizhan</h2>
                 <p class="headline-p">Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
@@ -29,7 +29,96 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <button class="headline-button">Start collaboration</button>
             </div>
             <img class="headline-img" src="./media/header-section.svg" alt="">
-        </div>
+        </section>
+        <main>
+        <section class="projects-section">
+            <h2 class="section-title">Projects</h2>
+            <div class="project-container project-1">
+                <div class="project-image"></div>
+                <h3 class="project-name">Project name goes here</h3>
+                <i class="project-technology">HTML/CSS</i>
+                <i class="project-technology">Ruby on Rails</i>
+                <i class="project-technology">JavaScript</i>
+                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+            </div>
+            <div class="project-container project-2">
+                <div class="project-image"></div>
+                <h3 class="project-name">Project name goes here</h3>
+                <i class="project-technology">HTML/CSS</i>
+                <i class="project-technology">Ruby on Rails</i>
+                <i class="project-technology">JavaScript</i>
+                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+            </div>
+            <div class="project-container project-3">
+                <div class="project-image"></div>
+                <h3 class="project-name">Project name goes here</h3>
+                <i class="project-technology">HTML/CSS</i>
+                <i class="project-technology">Ruby on Rails</i>
+                <i class="project-technology">JavaScript</i>
+                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+            </div>
+            <div class="project-container project-4">
+                <div class="project-image"></div>
+                <h3 class="project-name">Project name goes here</h3>
+                <i class="project-technology">HTML/CSS</i>
+                <i class="project-technology">Ruby on Rails</i>
+                <i class="project-technology">JavaScript</i>
+                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+            </div>
+            <div class="project-container project-5">
+                <div class="project-image"></div>
+                <h3 class="project-name">Project name goes here</h3>
+                <i class="project-technology">HTML/CSS</i>
+                <i class="project-technology">Ruby on Rails</i>
+                <i class="project-technology">JavaScript</i>
+                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+            </div>
+            <div class="project-container project-6">
+                <div class="project-image"></div>
+                <h3 class="project-name">Project name goes here</h3>
+                <i class="project-technology">HTML/CSS</i>
+                <i class="project-technology">Ruby on Rails</i>
+                <i class="project-technology">JavaScript</i>
+                <div class="button project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+            </div>
+        </section>
+        <section class="about-section">
+            <h2 class="section-title">About</h2>
+            <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
+            <div class="button"><a href="#">Get my CV<i class="download-icon"></i></a></div>
+            <div class="about-details-container">
+                <div class="about-detail">
+                    <h3>Languages</h3>
+                    <ul class="about-list">
+                        <li>JavaScript(ES5/ES6)</li>
+                        <li>Ruby</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+                <div class="about-detail">
+                    <h3>Frameworks</h3>
+                    <ul class="about-list">
+                        <li>Bootstrap</li>
+                        <li>Ruby on Rails</li>
+                        <li>RSpec</li>
+                        <li>Capibara</li>
+                        <li>Selenium</li>
+                    </ul>
+                </div>
+                <div class="about-detail">
+                    <h3>Skills</h3>
+                    <ul class="about-list">
+                        <li>Codekit</li>
+                        <li>Codepen</li>
+                        <li>GitHub</li>
+                        <li>GitLab</li>
+                        <li>Terminal</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
     </main>
 </body>
 </html>
