Style for project section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>nevisende</title>
@@ -30,62 +31,74 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </div>
             <img class="headline-img" src="./media/header-section.svg" alt="">
         </section>
-        <main>
         <section class="projects-section">
             <h2 class="section-title">Projects</h2>
             <div class="project-container project-1">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <i class="project-technology">HTML/CSS</i>
-                <i class="project-technology">Ruby on Rails</i>
-                <i class="project-technology">JavaScript</i>
-                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+                <div class="project-technology-container">
+                    <i class="project-technology">HTML/CSS</i>
+                    <i class="project-technology">Ruby on Rails</i>
+                    <i class="project-technology">JavaScript</i>
+                </div>
+                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
+                
             </div>
             <div class="project-container project-2">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <i class="project-technology">HTML/CSS</i>
-                <i class="project-technology">Ruby on Rails</i>
-                <i class="project-technology">JavaScript</i>
-                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+                <div class="project-technology-container">
+                    <i class="project-technology">HTML/CSS</i>
+                    <i class="project-technology">Ruby on Rails</i>
+                    <i class="project-technology">JavaScript</i>
+                </div>
+                <div class="button project-button"><a href="#">See this Project<i class="fas fa-arrow-right"></i></a></div>
             </div>
             <div class="project-container project-3">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <i class="project-technology">HTML/CSS</i>
-                <i class="project-technology">Ruby on Rails</i>
-                <i class="project-technology">JavaScript</i>
-                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+                <div class="project-technology-container">
+                    <i class="project-technology">HTML/CSS</i>
+                    <i class="project-technology">Ruby on Rails</i>
+                    <i class="project-technology">JavaScript</i>
+                </div>
+                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
             </div>
             <div class="project-container project-4">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <i class="project-technology">HTML/CSS</i>
-                <i class="project-technology">Ruby on Rails</i>
-                <i class="project-technology">JavaScript</i>
-                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+                <div class="project-technology-container">
+                    <i class="project-technology">HTML/CSS</i>
+                    <i class="project-technology">Ruby on Rails</i>
+                    <i class="project-technology">JavaScript</i>
+                </div>
+                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
             </div>
             <div class="project-container project-5">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <i class="project-technology">HTML/CSS</i>
-                <i class="project-technology">Ruby on Rails</i>
-                <i class="project-technology">JavaScript</i>
-                <div class="project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+                <div class="project-technology-container">
+                    <i class="project-technology">HTML/CSS</i>
+                    <i class="project-technology">Ruby on Rails</i>
+                    <i class="project-technology">JavaScript</i>
+                </div>
+                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
             </div>
             <div class="project-container project-6">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <i class="project-technology">HTML/CSS</i>
-                <i class="project-technology">Ruby on Rails</i>
-                <i class="project-technology">JavaScript</i>
-                <div class="button project-button"><a href="#">See this Project<i class="right-arrow-icon"></i></a></div>
+                <div class="project-technology-container">
+                    <i class="project-technology">HTML/CSS</i>
+                    <i class="project-technology">Ruby on Rails</i>
+                    <i class="project-technology">JavaScript</i>
+                </div>
+                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
             </div>
         </section>
         <section class="about-section">
             <h2 class="section-title">About</h2>
             <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
-            <div class="button"><a href="#">Get my CV<i class="download-icon"></i></a></div>
+            <div class="button"><a href="#">Get my CV<img class="download-icon"></img></a></div>
             <div class="about-details-container">
                 <div class="about-detail">
                     <h3>Languages</h3>
@@ -118,7 +131,6 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 </div>
             </div>
         </section>
-    </main>
     </main>
 </body>
 </html>
