--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
         <section class="about-section">
             <h2 class="section-title">About</h2>
             <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
-            <div class="button"><a href="#">Get my CV<img class="download-icon"></img></a></div>
+            <div class="button cv-button"><a href="#">Get my CV<img class="download-icon"></img></a></div>
             <div class="about-details-container">
                 <div class="about-detail">
                     <h3>Languages</h3>
