--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i class="menu-icon"></i>
         </nav>
     </header>
-    <main>
+    <main class="wrapper-grid">
         <section class="headline-section">
             <div class="headline-content">
                 <h2 class="headline-title">Furkan Denizhan</h2>
