Edit for required changes

--- a/index.html
+++ b/index.html
@@ -36,69 +36,69 @@ If you like what you see and have a project you need coded, don’t hesitate and
             <div class="project-container project-1">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <div class="project-technology-container">
-                    <i class="project-technology">HTML/CSS</i>
-                    <i class="project-technology">Ruby on Rails</i>
-                    <i class="project-technology">JavaScript</i>
-                </div>
-                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
+                <ul class="project-technology-container">
+                    <li><i class="project-technology">HTML/CSS</i></li>
+                    <li><i class="project-technology">Ruby on Rails</i></li>
+                    <li><i class="project-technology">JavaScript</i></li>
+                </ul>
+                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
                 
             </div>
             <div class="project-container project-2">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <div class="project-technology-container">
-                    <i class="project-technology">HTML/CSS</i>
-                    <i class="project-technology">Ruby on Rails</i>
-                    <i class="project-technology">JavaScript</i>
-                </div>
-                <div class="button project-button"><a href="#">See this Project<i class="fas fa-arrow-right"></i></a></div>
+                <ul class="project-technology-container">
+                    <li><i class="project-technology">HTML/CSS</i></li>
+                    <li><i class="project-technology">Ruby on Rails</i></li>
+                    <li><i class="project-technology">JavaScript</i></li>
+                </ul>
+                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-3">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <div class="project-technology-container">
-                    <i class="project-technology">HTML/CSS</i>
-                    <i class="project-technology">Ruby on Rails</i>
-                    <i class="project-technology">JavaScript</i>
-                </div>
-                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
+                <ul class="project-technology-container">
+                    <li><i class="project-technology">HTML/CSS</i></li>
+                    <li><i class="project-technology">Ruby on Rails</i></li>
+                    <li><i class="project-technology">JavaScript</i></li>
+                </ul>
+                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-4">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <div class="project-technology-container">
-                    <i class="project-technology">HTML/CSS</i>
-                    <i class="project-technology">Ruby on Rails</i>
-                    <i class="project-technology">JavaScript</i>
-                </div>
-                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
+                <ul class="project-technology-container">
+                    <li><i class="project-technology">HTML/CSS</i></li>
+                    <li><i class="project-technology">Ruby on Rails</i></li>
+                    <li><i class="project-technology">JavaScript</i></li>
+                </ul>
+                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-5">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <div class="project-technology-container">
-                    <i class="project-technology">HTML/CSS</i>
-                    <i class="project-technology">Ruby on Rails</i>
-                    <i class="project-technology">JavaScript</i>
-                </div>
-                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
+                <ul class="project-technology-container">
+                    <li><i class="project-technology">HTML/CSS</i></li>
+                    <li><i class="project-technology">Ruby on Rails</i></li>
+                    <li><i class="project-technology">JavaScript</i></li>
+                </ul>
+                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-6">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
-                <div class="project-technology-container">
-                    <i class="project-technology">HTML/CSS</i>
-                    <i class="project-technology">Ruby on Rails</i>
-                    <i class="project-technology">JavaScript</i>
-                </div>
-                <div class="button project-button"><a href="#">See this Project <i class="fas fa-arrow-right"></i></a></div>
+                <ul class="project-technology-container">
+                    <li><i class="project-technology">HTML/CSS</i></li>
+                    <li><i class="project-technology">Ruby on Rails</i></li>
+                    <li><i class="project-technology">JavaScript</i></li>
+                </ul>
+                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
         </section>
         <section class="about-section">
             <h2 class="section-title">About</h2>
             <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
-            <div class="button cv-button"><a href="#">Get my CV<img class="download-icon"></img></a></div>
+            <button class="button cv-button">Get my CV<img class="download-icon"></img></a></button>
             <div class="about-details-container">
                 <div class="about-detail">
                     <h3>Languages</h3>
