Add contact form

--- a/index.html
+++ b/index.html
@@ -131,6 +131,25 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 </div>
             </div>
         </section>
+         <section class="contact-section">
+            <form  action="https://formspree.io/f/mzbyqovr"
+  method="POST">
+
+    <h2>Get Started</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+    <label class="contact-label">
+        <span>Your Name</span> 
+        <input type="text" maxlength="30">
+    </label>
+    <label class="contact-label"> 
+        <span>Your Email</span>
+        <input type="email" name="emial" id="email">
+    </label>
+    
+    <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..."></textarea>
+    <button type="submit"> Start collaboration</button>
+</form>
+        </section>
     </main>
 </body>
 </html>
