Add necessary edits after code review

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2 class="headline-title">Furkan Denizhan</h2>
                 <p class="headline-p">Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
 If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-                <button class="headline-button">Start collaboration</button>
+                <button class="headline-button" type="button">Start collaboration</button>
             </div>
             <img class="headline-img" src="./media/header-section.svg" alt="">
         </section>
@@ -41,7 +41,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     <li><i class="project-technology">Ruby on Rails</i></li>
                     <li><i class="project-technology">JavaScript</i></li>
                 </ul>
-                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
                 
             </div>
             <div class="project-container project-2">
@@ -52,7 +52,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     <li><i class="project-technology">Ruby on Rails</i></li>
                     <li><i class="project-technology">JavaScript</i></li>
                 </ul>
-                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-3">
                 <div class="project-image"></div>
@@ -62,7 +62,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     <li><i class="project-technology">Ruby on Rails</i></li>
                     <li><i class="project-technology">JavaScript</i></li>
                 </ul>
-                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-4">
                 <div class="project-image"></div>
@@ -72,7 +72,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     <li><i class="project-technology">Ruby on Rails</i></li>
                     <li><i class="project-technology">JavaScript</i></li>
                 </ul>
-                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-5">
                 <div class="project-image"></div>
@@ -82,7 +82,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     <li><i class="project-technology">Ruby on Rails</i></li>
                     <li><i class="project-technology">JavaScript</i></li>
                 </ul>
-                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="project-container project-6">
                 <div class="project-image"></div>
@@ -92,13 +92,13 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     <li><i class="project-technology">Ruby on Rails</i></li>
                     <li><i class="project-technology">JavaScript</i></li>
                 </ul>
-                <button class="button project-button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
         </section>
         <section class="about-section">
             <h2 class="section-title">About</h2>
             <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
-            <button class="button cv-button">Get my CV<img src="./media/icons/file_download_black_24dp.svg" class="download-icon" alt="My-cv"/></button>
+            <button class="button cv-button" type="button">Get my CV<img src="./media/icons/file_download_black_24dp.svg" class="download-icon" alt="My-cv"/></button>
             <div class="about-details-container">
                 <div class="about-detail">
                     <h3>Languages</h3>
@@ -139,14 +139,14 @@ If you like what you see and have a project you need coded, don’t hesitate and
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
     <label class="contact-label">
         <span>Your Name</span> 
-        <input type="text" maxlength="30">
+        <input type="text" maxlength="30" required>
     </label>
     <label class="contact-label"> 
         <span>Your Email</span>
-        <input type="email" name="emial" id="email">
+        <input type="email" name="emial" id="email" required>
     </label>
     
-    <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..."></textarea>
+    <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
     <button type="submit"> Start collaboration</button>
 </form>
         </section>
