Add an image in headline-images section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
                 <button class="headline-button" type="button">Start collaboration</button>
             </div>
-            <img class="headline-img" src="./media/header-section.svg" alt="">
+            <div class="headline-images">
+                <img class="headline-img2" src="./media/image_dots.svg" alt="dots">
+                <img class="headline-img" src="./media/header-section.svg" alt="">
+            </div>
         </section>
         <section class="projects-section">
             <h2 class="section-title">Projects</h2>
