Wrap the project section with grid

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </div>
         </section>
         <section class="projects-section">
-            <h2 class="section-title">Projects</h2>
-            <div class="project-container project-1">
+            <div class="grid-project-div-1">
+                <h2 class="section-title">Projects</h2>
+                <img src="/media/image_dots.svg" alt="dot image">
+            </div>
+            <div class="grid-project-div-2 project-container project-1">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
                 <ul class="project-technology-container">
@@ -47,7 +50,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
                 
             </div>
-            <div class="project-container project-2">
+            <div class="grid-project-div-3 project-container project-2">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
                 <ul class="project-technology-container">
@@ -57,7 +60,8 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 </ul>
                 <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
-            <div class="project-container project-3">
+            <div class="grid-project-div-4"></div>
+            <div class="grid-project-div-5  project-container project-3">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
                 <ul class="project-technology-container">
@@ -67,7 +71,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 </ul>
                 <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
-            <div class="project-container project-4">
+            <div class="grid-project-div-6 project-container project-4">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
                 <ul class="project-technology-container">
@@ -77,7 +81,9 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 </ul>
                 <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
-            <div class="project-container project-5">
+            <div class="grid-project-div-7"></div>
+            <div class="grid-project-div-8"></div>
+            <div class="grid-project-div-9 project-container project-5">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
                 <ul class="project-technology-container">
@@ -87,7 +93,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 </ul>
                 <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
             </div>
-            <div class="project-container project-6">
+            <div class="no-grid-project-div project-container project-6">
                 <div class="project-image"></div>
                 <h3 class="project-name">Project name goes here</h3>
                 <ul class="project-technology-container">
