Complete desktop version of projects section

--- a/index.html
+++ b/index.html
@@ -41,67 +41,83 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </div>
             <div class="grid-project-div-2 project-container project-1">
                 <div class="project-image"></div>
-                <h3 class="project-name">Project name goes here</h3>
-                <ul class="project-technology-container">
-                    <li><i class="project-technology">HTML/CSS</i></li>
-                    <li><i class="project-technology">Ruby on Rails</i></li>
-                    <li><i class="project-technology">JavaScript</i></li>
-                </ul>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
-                
+                <div class="project-content">
+
+                    <h3 class="project-name">Project name goes here</h3>
+                    <ul class="project-technology-container">
+                        <li><i class="project-technology">HTML/CSS</i></li>
+                        <li><i class="project-technology">Ruby on Rails</i></li>
+                        <li><i class="project-technology">JavaScript</i></li>
+                    </ul>
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    
+                </div>
             </div>
             <div class="grid-project-div-3 project-container project-2">
                 <div class="project-image"></div>
-                <h3 class="project-name">Project name goes here</h3>
-                <ul class="project-technology-container">
-                    <li><i class="project-technology">HTML/CSS</i></li>
-                    <li><i class="project-technology">Ruby on Rails</i></li>
-                    <li><i class="project-technology">JavaScript</i></li>
-                </ul>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <div class="project-content">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <ul class="project-technology-container">
+                        <li><i class="project-technology">HTML/CSS</i></li>
+                        <li><i class="project-technology">Ruby on Rails</i></li>
+                        <li><i class="project-technology">JavaScript</i></li>
+                    </ul>
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                </div>
             </div>
-            <div class="grid-project-div-4"></div>
+            <div class="grid-project-div-4">
+                <img src="/media/grid-project-2-img.svg" alt="grid-project-2-image">
+            </div>
             <div class="grid-project-div-5  project-container project-3">
                 <div class="project-image"></div>
-                <h3 class="project-name">Project name goes here</h3>
-                <ul class="project-technology-container">
-                    <li><i class="project-technology">HTML/CSS</i></li>
-                    <li><i class="project-technology">Ruby on Rails</i></li>
-                    <li><i class="project-technology">JavaScript</i></li>
-                </ul>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <div class="project-content">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <ul class="project-technology-container">
+                        <li><i class="project-technology">HTML/CSS</i></li>
+                        <li><i class="project-technology">Ruby on Rails</i></li>
+                        <li><i class="project-technology">JavaScript</i></li>
+                    </ul>
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                </div>
             </div>
             <div class="grid-project-div-6 project-container project-4">
                 <div class="project-image"></div>
-                <h3 class="project-name">Project name goes here</h3>
-                <ul class="project-technology-container">
-                    <li><i class="project-technology">HTML/CSS</i></li>
-                    <li><i class="project-technology">Ruby on Rails</i></li>
-                    <li><i class="project-technology">JavaScript</i></li>
-                </ul>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <div class="project-content">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <ul class="project-technology-container">
+                        <li><i class="project-technology">HTML/CSS</i></li>
+                        <li><i class="project-technology">Ruby on Rails</i></li>
+                        <li><i class="project-technology">JavaScript</i></li>
+                    </ul>
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                </div>
             </div>
-            <div class="grid-project-div-7"></div>
-            <div class="grid-project-div-8"></div>
+            <div class="grid-project-div-7"><img src="media/grid-project-3-img.png" alt="grid-project-3-img"></div>
+            <div class="grid-project-div-8"><img src="media/grid-project-5-img.svg" alt="grid-project-5-image"/> <img src="media/grid-project-img-6.svg" alt="grid-project-6-img"/></div>
             <div class="grid-project-div-9 project-container project-5">
                 <div class="project-image"></div>
-                <h3 class="project-name">Project name goes here</h3>
-                <ul class="project-technology-container">
-                    <li><i class="project-technology">HTML/CSS</i></li>
-                    <li><i class="project-technology">Ruby on Rails</i></li>
-                    <li><i class="project-technology">JavaScript</i></li>
-                </ul>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <div class="project-content">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <ul class="project-technology-container">
+                        <li><i class="project-technology">HTML/CSS</i></li>
+                        <li><i class="project-technology">Ruby on Rails</i></li>
+                        <li><i class="project-technology">JavaScript</i></li>
+                    </ul>
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                </div>
             </div>
             <div class="no-grid-project-div project-container project-6">
                 <div class="project-image"></div>
-                <h3 class="project-name">Project name goes here</h3>
-                <ul class="project-technology-container">
-                    <li><i class="project-technology">HTML/CSS</i></li>
-                    <li><i class="project-technology">Ruby on Rails</i></li>
-                    <li><i class="project-technology">JavaScript</i></li>
-                </ul>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <div class="project-content">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <ul class="project-technology-container">
+                        <li><i class="project-technology">HTML/CSS</i></li>
+                        <li><i class="project-technology">Ruby on Rails</i></li>
+                        <li><i class="project-technology">JavaScript</i></li>
+                    </ul>
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                </div>
+                <img src="media/grid-project-4-img.png" alt="">
             </div>
         </section>
         <section class="about-section">
