--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </div>
         </section>
         <section class="about-section">
-            <h2 class="section-title">About</h2>
-            <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
-            <button class="button cv-button" type="button">Get my CV<img src="./media/icons/file_download_black_24dp.svg" class="download-icon" alt="My-cv"/></button>
+            <div class="about-header">
+                <h2 class="section-title">About</h2>
+                <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
+                <button class="button cv-button" type="button">Get my CV<img src="./media/icons/file_download_black_24dp.svg" class="download-icon" alt="My-cv"/></button>
+            </div>
             <div class="about-details-container">
                 <div class="about-detail">
                     <h3>Languages</h3>
@@ -154,6 +156,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                         <li>Terminal</li>
                     </ul>
                 </div>
+                <div class="about-detail"></div>
             </div>
         </section>
          <section class="contact-section">
