--- a/index.html
+++ b/index.html
@@ -160,23 +160,25 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </div>
         </section>
          <section class="contact-section">
-            <form  action="https://formspree.io/f/mzbyqovr"
-  method="POST">
-
-    <h2>Get Started</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-    <label class="contact-label">
-        <span>Your Name</span> 
-        <input type="text" maxlength="30" required>
-    </label>
-    <label class="contact-label"> 
-        <span>Your Email</span>
-        <input type="email" name="emial" id="email" required>
-    </label>
+            <form  action="https://formspree.io/f/mzbyqovr" method="POST">
+                <h2>Get Started</h2>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                 <div class="contact-label-group">
+                     <label class="contact-label">
+                           <span>Your Name</span> 
+                           <input type="text" maxlength="30" required>
+                     </label>
+                     <label class="contact-label"> 
+                            <span>Your Email</span>
+                           <input type="email" name="emial" id="email" required>
+                     </label>
+                 </div>
     
-    <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
-    <button type="submit"> Start collaboration</button>
-</form>
+                 <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
+                 <button type="submit"> Start collaboration</button>
+                 <img src="media/contact-left-img.svg" alt="">
+                 <img src="media/contact-right-img.svg" alt="">
+            </form>
         </section>
     </main>
 </body>
