--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="header-list">
+        <nav class="hamburger-menu">
+            <ul class="">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <i class="menu-icon"></i>
+            <i class="fas fa-bars menu-icon"></i>
         </nav>
     </header>
     <main class="wrapper-grid">
